# avrdude

./: .cvsignore  .editorconfig  .gitignore  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeSettings.json  COPYING  ChangeLog  ChangeLog-2002  ChangeLog-2004-2006  ChangeLog-2009  ChangeLog-2017  ChangeLog-2018  GNUmakefile.in  INSTALL  Makefile  Makefile.am  Makefile.inc  NEWS  README.md  Usage  arduino.c  avr.c  avr.h  avr910.c  avr910.h  avrdude.1  avrdude.conf.in  avrdude.conf.sample  avrdude.h  avrdude.spec.in  avrftdi.c  avrftdi.h  avrftdi_private.h  avrftdi_tpi.c  avrftdi_tpi.h  avrpart.c  avrpart.h  (+99 more)
.github/workflows/: CODEOWNERS  arduino_packing.yml  arduino_packing_release.yml  build.yml  build_cmake.yml  check-sourcecode.yml  deploy.yml  pull-request.yaml  release.yaml
auto-m4/: .gitignore
avrdude/: .cvsignore  AUTHORS  CHANGELOG  ChangeLog  ChangeLog-2001  Makefile  Makefile.am  NEWS  README  Usage  arduino.c  arduino.h  avr.c  avr.h  avr910.c  avr910.h  avrdude.1  avrdude.conf.in  avrdude.conf.sample  avrdude.h  avrdude.spec.in  avrftdi.c  avrftdi.h  avrftdi_private.h  avrftdi_tpi.c  avrftdi_tpi.h  avrpart.c  avrpart.h  avrprog.c  bitbang.c  bitbang.h  bootstrap  buspirate.c  buspirate.h  butterfly.c  butterfly.h  config.c  config.h  config_gram.y  configure.ac  (+74 more)
avrdude/avrdude/: AUTHORS  README  butterfly.h  config.h  confwin.h  freebsd_ppi.h  linux_ppdev.h  par.h  pgm.h  ppi.c  safemode.c  ser_win32.c  stk500.h  update.h  usbtiny.h
avrdude/avrdude/doc/: .cvsignore
avrdude/avrdude/tools/: get-stk600-cards.xsl
avrdude/doc/: .cvsignore  Makefile.am  TODO  avrdude.texi
avrdude/tools/: build-mingw32.sh  get-dw-params.xsl  get-hv-params.xsl  get-stk600-devices.xsl
avrdude/windows/: Makefile.am
build-helpers/: versioninfo.md  versioninfo.mk  versioninfo.sh
doc/: .cvsignore  Makefile.am  TODO  avrdude.texi
docs/: Installation.md  Usage.md  avrdude.css  avrdude.html  avrdude_1.html  avrdude_10.html  avrdude_11.html  avrdude_12.html  avrdude_13.html  avrdude_14.html  avrdude_15.html  avrdude_16.html  avrdude_17.html  avrdude_18.html  avrdude_19.html  avrdude_2.html  avrdude_20.html  avrdude_21.html  avrdude_22.html  avrdude_23.html  avrdude_24.html  avrdude_25.html  avrdude_26.html  avrdude_27.html  avrdude_28.html  avrdude_29.html  avrdude_3.html  avrdude_30.html  avrdude_31.html  avrdude_32.html  avrdude_33.html  avrdude_34.html  avrdude_35.html  avrdude_36.html  avrdude_37.html  avrdude_38.html  avrdude_39.html  avrdude_4.html  avrdude_40.html  avrdude_5.html  (+7 more)
docs/6.4/: avrdude.html  avrdude_1.html  avrdude_10.html  avrdude_11.html  avrdude_12.html  avrdude_13.html  avrdude_14.html  avrdude_15.html  avrdude_16.html  avrdude_17.html  avrdude_18.html  avrdude_19.html  avrdude_2.html  avrdude_20.html  avrdude_3.html  avrdude_4.html  avrdude_5.html  avrdude_6.html  avrdude_7.html  avrdude_8.html  avrdude_9.html  avrdude_abt.html  avrdude_toc.html
docs/7.0/: avrdude.html  avrdude_1.html  avrdude_10.html  avrdude_11.html  avrdude_12.html  avrdude_13.html  avrdude_14.html  avrdude_15.html  avrdude_16.html  avrdude_17.html  avrdude_18.html  avrdude_19.html  avrdude_2.html  avrdude_20.html  avrdude_21.html  avrdude_22.html  avrdude_23.html  avrdude_24.html  avrdude_25.html  avrdude_26.html  avrdude_27.html  avrdude_28.html  avrdude_29.html  avrdude_3.html  avrdude_30.html  avrdude_31.html  avrdude_32.html  avrdude_33.html  avrdude_34.html  avrdude_35.html  avrdude_36.html  avrdude_37.html  avrdude_38.html  avrdude_39.html  avrdude_4.html  avrdude_40.html  avrdude_5.html  avrdude_6.html  avrdude_7.html  avrdude_8.html  (+3 more)
docs/7.1/: avrdude_1.html  avrdude_11.html  avrdude_14.html  avrdude_15.html  avrdude_19.html  avrdude_21.html  avrdude_22.html  avrdude_23.html  avrdude_24.html  avrdude_25.html  avrdude_26.html  avrdude_28.html  avrdude_29.html  avrdude_30.html  avrdude_34.html  avrdude_35.html  avrdude_37.html  avrdude_4.html
docs/7.2/: avrdude.html  avrdude_1.html  avrdude_10.html  avrdude_11.html  avrdude_12.html  avrdude_13.html  avrdude_14.html  avrdude_15.html  avrdude_16.html  avrdude_17.html  (+33 more)
interface/: CMakeLists.txt  developer_opts_private.h  main.cpp
libserial/: CMakeLists.txt  LibSerial.c  LibSerial.cpp  LibSerial.h  avrdude-worker.js  rollup.config.js
src/: CMakeLists.txt  Callbacks_Assembly.c  Callbacks_Assembly.h  Callbacks_PseudoCode.c  Callbacks_PseudoCode.h  Functions.h  GNUmakefile.in  Globals.h  IORegisters.c  IORegisters.h  JumpCall.c  JumpCall.h  MNemonics.c  MNemonics.h  Makefile.am  Options.c  Options.h  Tagfile.c  Tagfile.h  Tools.c  Tools.h  arduino.c  arduino.cpp  arduino.h  autotools-build.sh  avr.c  avr.cpp  avr910.c  avr910.cpp  avr910.h  avr_opcodes.c  avrcache.c  avrcache.cpp  avrdisas.c  avrdude.1  avrdude.conf.in  avrdude.h  avrdude.spec.in  avrdude_msg.c  avrftdi.c  (+233 more)
src/auto-aux/: .gitignore
src/build-helpers/: buildinfo.cmake  buildinfo.m4  buildinfo.md  buildinfo.mk  package-version  package-version.mk  versioninfo.m4  versioninfo.sh
src/doc/: .gitignore  CMakeLists.txt  Makefile.am  avrdude.css  avrdude.texi  gen_doc.sh.in  gen_texi.sh.in  gen_version.sh.in  include.mk  parts.cmake  parts.sed  programmer_types.cmake  programmers.cmake  programmers.sed  texify.awk
src/msvc/: getopt.c  getopt.h  gettimeofday.c  msvc_compat.h  readline.cpp  unistd.h  usleep.cpp
src/msvc/readline/: history.h  readline.h
src/msvc/sys/: time.h
src/python/: about.ui  adgui.bat.in  adgui.py  adgui.sh.in  adgui.ui  askfuse.ui  device.ui  devinfo.ui  help.ui  loglevel.ui  memories.ui  programmer.ui  swigtest.py
src/windows/: loaddrv.c
test/: CMakeLists.txt  atmega.hex  atmega.html  developer_opts.cpp  developer_opts.h  every.hex  index.html  main.cpp  nanoevery.html  program.hex  serve.json
tests/: test_invariant_arduino.c
toolchain/: Emscripten.cmake
tools/: atdf-to-avrdude.xslt  bootloader-hash  build-mingw32.sh  check-sourcecode  elf2tag  get-dw-params.xsl  get-hv-params.xsl  get-stk600-cards.xsl  get-stk600-devices.xsl  include.mk  linter.py  scripts_decoder.py  test-avrdude  test8
windows/: Makefile.am
(+347 files in other folders)
